# opentelemetry-demo

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  hyperdx-compose.yaml  updater.py
kubernetes/: README.md  opentelemetry-demo.yaml
kubernetes/k8s-otel/: daemonset.yaml  deployment.yaml
src/accounting/: Accounting.csproj  Dockerfile
src/ad/: build.gradle
src/artillery-load-generator/: Dockerfile  README.md  flows.js  load-test-example.yaml  load-test.template.yaml  package-lock.json  package.json  run.sh
src/cart/src/: Program.cs  cart.csproj
src/checkout/: go.mod  go.sum  main.go
src/clickhouse/: config.xml
src/currency/: CMakeLists.txt
src/email/: Gemfile  email_server.rb
src/flagd/: demo.flagd.json
src/fraud-detection/: build.gradle.kts
src/frontend/: Dockerfile  next.config.js  package-lock.json  package.json
src/frontend-proxy/: envoy.tmpl.yaml
src/grafana/: grafana.ini
src/load-generator/: generate_people.py  locustfile.py  people.json  requirements.txt
src/loadgenerator/: requirements.txt
src/otel-collector/: otelcol-config-extras.yml  otelcol-config.yml
src/payment/: charge.js  index.js  logger.js  opentelemetry.js  package-lock.json  package.json
src/paymentservice/: package-lock.json  package.json
src/product-catalog/: go.mod  go.sum  main.go
src/quote/: composer.json
src/recommendation/: Dockerfile  demo_pb2.py  logger.py  metrics.py  recommendation_server.py  requirements.txt
src/shipping/: Cargo.toml
src/shipping/src/: main.rs  shipping_service.rs
src/shipping/src/shipping_service/: quote.rs
(+35 files in other folders)
