

[package]
name = "shipping"
version = "1.8.0"
edition = "2021"

[[bin]]
name = "shipping"
path = "src/main.rs"

[features]
dockerproto = [] # compile in docker or not

[dependencies]
tonic = "0.11"
tonic-health = "0.11.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
simplelog = "0.12"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.11"
